[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Platform.gd" type="Script" id=1]
[ext_resource path="res://scenes/Spike.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5, 5 )

[node name="Platform" type="StaticBody2D"]
collision_layer = 2147483651
collision_mask = 3
script = ExtResource( 1 )

[node name="Spike1" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, -2 )
rotation = -3.14159
constant_linear_velocity = Vector2( 0, -15 )

[node name="Spike2" parent="." instance=ExtResource( 2 )]
position = Vector2( 18, -2 )
rotation = -3.14159

[node name="Spike3" parent="." instance=ExtResource( 2 )]
position = Vector2( 28, -2 )
rotation = -3.14159
constant_linear_velocity = Vector2( 0, -15 )

[node name="Spike4" parent="." instance=ExtResource( 2 )]
position = Vector2( 38, -2 )
rotation = -3.14159
constant_linear_velocity = Vector2( 0, -15 )

[node name="Spike5" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, -2 )
rotation = -3.14159
constant_linear_velocity = Vector2( 0, -15 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, 5 )
points = PoolVector2Array( 0, 0, 56.8252, 0.0377655 )
default_color = Color( 0.517647, 0.427451, 0.34902, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 28, 5 )
shape = SubResource( 1 )
